...
            <objects>
                <viewController storyboardIdentifier="CurrentWeatherController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="CurrentWeatherController" customModule="CurrentWeather" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter the city" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lOT-xT-Cbs">
                                <rect key="frame" x="16" y="74" width="350" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="6Qg-YT-FH7"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p2N-Vq-xLY" secondAttribute="trailing" id="j1C-Kt-rcD"/>
                            <constraint firstItem="aJ1-pr-a1H" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="lct-F8-Mdb"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="nyF-Ab-xDM">
                        <barButtonItem key="rightBarButtonItem" title="Forecast" id="fRi-hN-2bT">
                            <connections>
                                <action selector="toForeCastPage:" destination="BYZ-38-t0r" id="ZF6-vg-4ke"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
