...
    func fetchWeather(){
        let request = CurrentWeather.FetchWeather.Request(cityName: "Bangkok", units: unit.rawValue)
        self.interactor?.getCurrentWeather(request: request)
    }
    
    override func setupUI(){
        title = "Weather"
       
        weatherImageView.layer.cornerRadius = 75
        setButton()
    }
    
    func setButton(){
...
